--- a/portfolio.html
+++ b/portfolio.html
@@ -94,8 +94,13 @@
                     </li>
                     <li class="example-items">
                         <a href="" class="example-link link">
-                            <img src="./images/portfolio-img2.jpg" alt="Изображение двух баскетболистов" width="370" height="294">
-                            <div class="example-work">
+                            <div class="example-img">
+                                <img src="./images/portfolio-img2.jpg" alt="Изображение двух баскетболистов" width="370" height="294">
+                                <div class="overlay">
+                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti quis velit, in voluptatibus natus sunt beatae animi iure optio voluptas excepturi error, nobis, modi illum.</p>
+                                </div>
+                            </div>
+                                <div class="example-work">
                                 <h3 class="example-title" lang="en">Постер New Orlean vs Golden Star</h3>
                                 <p class="example-content">Дизайн</p>
                             </div>
@@ -103,7 +108,12 @@
                     </li>
                     <li class="example-items">
                         <a href="" class="example-link link">
-                            <img src="./images/portfolio-img3.jpg" alt="Изображение логотипу ресторану" width="370" height="294">
+                            <div class="example-img">
+                                <img src="./images/portfolio-img3.jpg" alt="Изображение логотипу ресторану" width="370" height="294">
+                                <div class="overlay">
+                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus ducimus placeat molestiae eveniet eligendi ipsa atque alias error similique aliquid, corporis incidunt quis nobis aut eum, fuga magni. Omnis, odio.</p>
+                                </div>    
+                            </div>    
                             <div class="example-work">
                                 <h3 class="example-title" lang="en">Ресторан Seafood</h3>
                                 <p class="example-content">Приложение</p>
@@ -112,7 +122,12 @@
                     </li>
                     <li class="example-items">
                         <a href="" class="example-link link">
-                            <img src="./images/portfolio-img4.jpg" alt="Изображение наушников" width="370" height="294">
+                            <div class="example-img">
+                                <img src="./images/portfolio-img4.jpg" alt="Изображение наушников" width="370" height="294">
+                                <div class="overlay">
+                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus ducimus placeat molestiae eveniet eligendi ipsa atque alias error similique aliquid, corporis incidunt quis nobis aut eum, fuga magni. Omnis, odio.</p>
+                                </div>    
+                            </div>    
                             <div class="example-work">
                                 <h3 class="example-title" lang="en">Проект Prime</h3>
                                 <p class="example-content">Маркетинг</p>
@@ -121,7 +136,12 @@
                     </li>
                     <li class="example-items">
                         <a href="" class="example-link link">
-                            <img src="./images/portfolio-img5.jpg" alt="Изображение двух коробок" width="370" height="294">
+                            <div class="example-img">
+                                <img src="./images/portfolio-img5.jpg" alt="Изображение двух коробок" width="370" height="294">
+                                <div class="overlay">
+                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus ducimus placeat molestiae eveniet eligendi ipsa atque alias error similique aliquid, corporis incidunt quis nobis aut eum, fuga magni. Omnis, odio.</p>
+                                </div>    
+                            </div>    
                             <div class="example-work">
                                 <h3 class="example-title" lang="en">Проект Boxes</h3>
                                 <p class="example-content">Приложение</p>
@@ -129,8 +149,13 @@
                         </a>
                     </li>
                     <li class="example-items">
-                        <a href="" class="example-link link">                            
-                            <img src="./images/portfolio-img6.jpg" alt="Изображение монитора" width="370" height="294">
+                        <a href="" class="example-link link">
+                            <div class="example-img">                            
+                                <img src="./images/portfolio-img6.jpg" alt="Изображение монитора" width="370" height="294">
+                                <div class="overlay">
+                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus ducimus placeat molestiae eveniet eligendi ipsa atque alias error similique aliquid, corporis incidunt quis nobis aut eum, fuga magni. Omnis, odio.</p>
+                                </div>    
+                            </div>    
                             <div class="example-work">
                                 <h3 class="example-title" lang="en">Inspiration has no Borders</h3>
                                 <p class="example-content">Веб-сайт</p>
@@ -139,7 +164,12 @@
                     </li>
                     <li class="example-items">
                         <a href="" class="example-link link">
-                            <img src="./images/portfolio-img7.jpg" alt="Изображение книги" width="370" height="294">
+                            <div class="example-img">
+                                <img src="./images/portfolio-img7.jpg" alt="Изображение книги" width="370" height="294">
+                                <div class="overlay">
+                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus ducimus placeat molestiae eveniet eligendi ipsa atque alias error similique aliquid, corporis incidunt quis nobis aut eum, fuga magni. Omnis, odio.</p>
+                                </div>    
+                            </div>    
                             <div class="example-work">
                                 <h3 class="example-title" lang="en">Издание Limited Edition</h3>
                                 <p class="example-content">Дизайн</p>
@@ -148,7 +178,12 @@
                     </li>
                     <li class="example-items">
                         <a href="" class="example-link link">
-                            <img src="./images/portfolio-img8.jpg" alt="Изображение лейбла" width="370" height="294">
+                            <div class="example-img">
+                                <img src="./images/portfolio-img8.jpg" alt="Изображение лейбла" width="370" height="294">
+                                <div class="overlay">
+                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus ducimus placeat molestiae eveniet eligendi ipsa atque alias error similique aliquid, corporis incidunt quis nobis aut eum, fuga magni. Omnis, odio.</p>
+                                </div>    
+                            </div>    
                             <div class="example-work">
                                 <h3 class="example-title" lang="en">Проект LAB</h3>
                                 <p class="example-content">Маркетинг</p>
@@ -157,7 +192,12 @@
                     </li>
                     <li class="example-items">
                         <a href="" class="example-link link">
-                            <img src="./images/portfolio-img9.jpg" alt="Изображение лептопа" width="370" height="294">
+                            <div class="example-img">
+                                <img src="./images/portfolio-img9.jpg" alt="Изображение лептопа" width="370" height="294">
+                                <div class="overlay">
+                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus ducimus placeat molestiae eveniet eligendi ipsa atque alias error similique aliquid, corporis incidunt quis nobis aut eum, fuga magni. Omnis, odio.</p>
+                                </div>    
+                            </div>    
                             <div class="example-work">
                                 <h3 class="example-title" lang="en">Growing Business</h3>
                                 <p class="example-content">Приложение</p>
