--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <a href="./index.html" class="logo link" lang="en"><span class="logo-span">Web</span>Studio</a>
                 <ul class="site-nav marker">
                     <li class="item"><a href="./index.html" class="link current">Студия</a></li>
-                    <li class="item"><a href="./portfolio.html" class="link">Портфолио</a></li>
+                    <li class="item"><a href="./portfolio.html" class="link ">Портфолио</a></li>
                     <li class="item"><a href="" class="link">Контакты</a></li>
                 </ul>
             </nav>
@@ -106,9 +106,18 @@
             <div class="container">
                 <h2 class="section-title">Чем мы занимаемся</h2>
                 <ul class="pattern marker">
-                    <li class="pattern-item"><img src="./images/example1.jpg" alt="Изображение, работа инженера за планшетом" width="370" height="294"></li>
-                    <li class="pattern-item"><img src="./images/example2.jpg" alt="Изображение, работа за лептопом" width="370" height="294"></li>
-                    <li class="pattern-item"><img src="./images/example3.jpg" alt="Изображение, работа дизайнера" width="370" height="294"></li>
+                    <li class="pattern-item">
+                        <img src="./images/example1.jpg" alt="Изображение, работа инженера за планшетом" width="370" height="294">
+                        <p class="pattern-labe">Десктопные приложения</p>
+                    </li>
+                    <li class="pattern-item">
+                        <img src="./images/example2.jpg" alt="Изображение, работа за лептопом" width="370" height="294">
+                        <p class="pattern-labe">Мобильные приложения</p>
+                    </li>
+                    <li class="pattern-item">
+                        <img src="./images/example3.jpg" alt="Изображение, работа дизайнера" width="370" height="294">
+                        <p class="pattern-labe">Мобильные приложения</p>
+                    </li>
                 </ul>
             </div>
         </section>
@@ -358,7 +367,7 @@
             </div>
         </div>
     </footer>
-    <div class="backdrop is-hidden" data-modal>
+    <div class="backdrop is-hidden " data-modal-close  data-modal>
         <div class="modal">
             <button data-modal-close>
                 <svg width="30" height="30"  xmlns="http://www.w3.org/2000/svg">
