--- a/portfolio.html
+++ b/portfolio.html
@@ -18,8 +18,8 @@
             <nav class="nav">
                 <a href="./index.html" class="logo link" lang="en"><span class="logo-span">Web</span>Studio</a>
                 <ul class="site-nav marker">
-                    <li class="item"><a href="./index.html" class="link current">Студия</a></li>
-                    <li class="item"><a href="./portfolio.html" class="link">Портфолио</a></li>
+                    <li class="item"><a href="./index.html" class="link ">Студия</a></li>
+                    <li class="item"><a href="./portfolio.html" class="link current">Портфолио</a></li>
                     <li class="item"><a href="" class="link">Контакты</a></li>
                 </ul>
             </nav>
@@ -111,7 +111,7 @@
                             <div class="example-img">
                                 <img src="./images/portfolio-img3.jpg" alt="Изображение логотипу ресторану" width="370" height="294">
                                 <div class="overlay">
-                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus ducimus placeat molestiae eveniet eligendi ipsa atque alias error similique aliquid, corporis incidunt quis nobis aut eum, fuga magni. Omnis, odio.</p>
+                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus ducimus ipsa atque alias error similique aliquid, corporis incidunt quis nobis aut eum, fuga magni. Omnis, odio.</p>
                                 </div>    
                             </div>    
                             <div class="example-work">
@@ -125,7 +125,7 @@
                             <div class="example-img">
                                 <img src="./images/portfolio-img4.jpg" alt="Изображение наушников" width="370" height="294">
                                 <div class="overlay">
-                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus ducimus placeat molestiae eveniet eligendi ipsa atque alias error similique aliquid, corporis incidunt quis nobis aut eum, fuga magni. Omnis, odio.</p>
+                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus ducimus ipsa atque alias error similique aliquid, corporis incidunt quis nobis aut eum, fuga magni. Omnis, odio.</p>
                                 </div>    
                             </div>    
                             <div class="example-work">
@@ -139,7 +139,7 @@
                             <div class="example-img">
                                 <img src="./images/portfolio-img5.jpg" alt="Изображение двух коробок" width="370" height="294">
                                 <div class="overlay">
-                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus ducimus placeat molestiae eveniet eligendi ipsa atque alias error similique aliquid, corporis incidunt quis nobis aut eum, fuga magni. Omnis, odio.</p>
+                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus ducimus ipsa atque alias error similique aliquid, corporis incidunt quis nobis aut eum, fuga magni. Omnis, odio.</p>
                                 </div>    
                             </div>    
                             <div class="example-work">
@@ -153,7 +153,7 @@
                             <div class="example-img">                            
                                 <img src="./images/portfolio-img6.jpg" alt="Изображение монитора" width="370" height="294">
                                 <div class="overlay">
-                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus ducimus placeat molestiae eveniet eligendi ipsa atque alias error similique aliquid, corporis incidunt quis nobis aut eum, fuga magni. Omnis, odio.</p>
+                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus ducimus ipsa atque alias error similique aliquid, corporis incidunt quis nobis aut eum, fuga magni. Omnis, odio.</p>
                                 </div>    
                             </div>    
                             <div class="example-work">
@@ -167,7 +167,7 @@
                             <div class="example-img">
                                 <img src="./images/portfolio-img7.jpg" alt="Изображение книги" width="370" height="294">
                                 <div class="overlay">
-                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus ducimus placeat molestiae eveniet eligendi ipsa atque alias error similique aliquid, corporis incidunt quis nobis aut eum, fuga magni. Omnis, odio.</p>
+                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus ducimus ipsa atque alias error similique aliquid, corporis incidunt quis nobis aut eum, fuga magni. Omnis, odio.</p>
                                 </div>    
                             </div>    
                             <div class="example-work">
@@ -181,7 +181,7 @@
                             <div class="example-img">
                                 <img src="./images/portfolio-img8.jpg" alt="Изображение лейбла" width="370" height="294">
                                 <div class="overlay">
-                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus ducimus placeat molestiae eveniet eligendi ipsa atque alias error similique aliquid, corporis incidunt quis nobis aut eum, fuga magni. Omnis, odio.</p>
+                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus ducimus ipsa atque alias error similique aliquid, corporis incidunt quis nobis aut eum, fuga magni. Omnis, odio.</p>
                                 </div>    
                             </div>    
                             <div class="example-work">
@@ -195,7 +195,7 @@
                             <div class="example-img">
                                 <img src="./images/portfolio-img9.jpg" alt="Изображение лептопа" width="370" height="294">
                                 <div class="overlay">
-                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus ducimus placeat molestiae eveniet eligendi ipsa atque alias error similique aliquid, corporis incidunt quis nobis aut eum, fuga magni. Omnis, odio.</p>
+                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus ducimus ipsa atque alias error similique aliquid, corporis incidunt quis nobis aut eum, fuga magni. Omnis, odio.</p>
                                 </div>    
                             </div>    
                             <div class="example-work">
